[article]: tag crud & article struct
