# models/tag.go
@@ -1,0 +1,11 @@
+package models
+
+import "time"
+
+type Tag struct {
+	ID        uint      `gorm:"primary_key;auto_increment" json:"id"`
+	Name      string    `gorm:"size:100;not null;unique" json:"name"`
+	CreatedAt time.Time `gorm:"default:CURRENT_TIMESTAMP" json:"created_at"`
+	UpdatedAt time.Time `gorm:"default:CURRENT_TIMESTAMP" json:"updated_at"`
+	// Article   []Article `json:"-"`
+}
